--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
             <nav>
                 <ul>
                     <!--<p>Menu</p>--->
-                    <li class="btn"><a href="mend.html" title="mend">MEND</a></li>
+                    <li class="btn"><a href="index.html" title="mend">MEND</a></li>
                     <li class="btn"><a href="make.html" title="make">MAKE</a></li>
                     <li class="btn"><a href="about.html" title="about">ABOUT</a></li>
                     <li class="btn"><a style="color:black" href="contact.html" title="contact">CONTACT</a></li>
