--- a/make.html
+++ b/make.html
@@ -23,7 +23,7 @@
 
         <div id="midcol">
                 <figure>
-                    <img src="images/make/make best/comb.jpg" alt="comb" title="comb" width="224" height="307">
+                    <img src="/images/make/make best/comb.jpg" alt="comb" title="comb" width="224" height="307">
                 </figure>
                 <figure>
                     <img src="images/make/make best/scissors.jpg" alt="scissors" title="scissors" width="224" height="307">
