--- a/make.html
+++ b/make.html
@@ -35,7 +35,7 @@
                     <img src="/images/make/make_best/frames.jpg" alt="frames" title="frames" width="224" height="307">
                 </figure>
                 <figure>
-                    <img src="/images/make/make_best/bernie.jpg" alt="bernie" title="bernie" width="224" height="307">
+                    <img src="https://github.com/plain-jane-gray/plain.jane.gray-website/blob/main/images/make/make_best/bernie.jpg" alt="bernie" title="bernie" width="224" height="307">
                 </figure>
                 <figure>
                     <img src="/images/make/make_best/shrimp me.jpg" alt="shrimp me" title="shrimp me" width="224" height="307">
