--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <img src="images/mend/mend best/heart underwear.jpg" alt="heart underwear" title="heart underwear" width="250" height="307">
                 </figure>
                 <figure>
-                    <img src="https://github.com/plain-jane-gray/plain.jane.gray-website/blob/main/images/mend/mend%20best/red%20bird.jpg" alt="red bird" title="red bird" width="250" height="307">
+                    <img src="red bird.jpg" alt="red bird" title="red bird" width="250" height="307">
                 </figure>
                 <figure>
                     <img src="images/mend/mend best/multicolor glove.jpg" alt="multicolor glove" title="multicolor glove" width="250" height="307">
