--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
                 <br class="clear">
 
         <div id="midcol">
-            <p>Plain Jane Gray is a textile artist and dancer in Brookyn, New York. Her work is influenced by her career as an environmental scientist and her experiences living with a disability. She mends items to restore functionality and reduce consumption. Using her labor, she transforms cheap fast fashion garments from ubiquitous and disposable to unique and invaluable. There is a long history of disabled women working in textiles. Much of her work pictured is created when she needs to limit movement due to her disability, but at the same time wishes to be productive.</p>
+            <p>Plain Jane Gray is a textile artist and dancer in Brookyn, New York. Her work is influenced by her career as an environmental scientist and her experiences living with a disability. She mends items to restore functionality and reduce consumption. Using her labor, she transforms cheap fast fashion garments from ubiquitous and disposable to unique and invaluable. There is a long history of disabled women working in textiles. Much of her work pictured is fabricated when she needs to limit movement due to her disability, but at the same time wishes to create.</p>
                     <br class="clear"><!--push the next closing divs downwards clear of the two floated columns -->
 				</div><!--the midcol div finishes here-->
                 <br class="clear">
