--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <img src="images/mend/mend best/heart underwear.jpg" alt="heart underwear" title="heart underwear" width="250" height="307">
                 </figure>
                 <figure>
-                    <img src="red_bird.jpg" alt="red_bird" title="red_bird" width="250" height="307">
+                    <img src="images/mend/mend best/red_bird.jpg" alt="red_bird" title="red_bird" width="250" height="307">
                 </figure>
                 <figure>
                     <img src="images/mend/mend best/multicolor glove.jpg" alt="multicolor glove" title="multicolor glove" width="250" height="307">
