--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
                 <br class="clear">
 
         <div id="midcol">
-            <p>Plain Jane Gray can be reached via email at plain.jane.gray and then the at symbol and gmail.com. She can also be found on Instagram using the same handle.</p>
+            <p>Plain Jane Gray can be reached via email at plain.jane.gray and then the at symbol and gmail.com. She can also be found on Instagram at plain.jane.gray_mend.and.make.</p>
                     <br class="clear"><!--push the next closing divs downwards clear of the two floated columns -->
 				</div><!--the midcol div finishes here-->
                 <br class="clear">
