--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<!-- Google tag (gtag.js) -->
+			<script async src="https://www.googletagmanager.com/gtag/js?id=G-7GS1KGBMTX"></script>
+			<script>
+ 			 	window.dataLayer = window.dataLayer || [];
+  				function gtag(){dataLayer.push(arguments);}
+  				gtag('js', new Date());
+
+  				gtag('config', 'G-7GS1KGBMTX');
+			</script>
 		<title>mend</title>
 		<meta charset=utf-8>
             <link href="style-plain-gdn.css" rel="stylesheet" type="text/css">
